# OpenExhibit

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
demo/: README.md  clean.sh  seed.sh
docs/: Makefile  README.md  api-routes.md  architecture.md  configuration.md  database-schema.md  exhibit-formats.md
migrations/: 0001_initial_schema.sql  0002_seed_install.sql  0003_smtp_settings.sql  0004_section_hide_title.sql  0005_custom_css.sql  0006_theme_colors.sql  0007_greentext.sql  0008_media_sha256.sql  0009_exhibit_theme_colors.sql
scripts/: gen-docs.sh
scss/admin/: main.scss
scss/public/: _audio.scss  _base.scss  _horizontal.scss  _lightbox.scss  _mobile.scss  _reset.scss  _slideshow.scss  _thumbs.scss  _typography.scss  _variables.scss  main.scss
src/: auth.rs  config.rs  crypto.rs  csrf.rs  db.rs  error.rs  flash.rs  i18n.rs  images.rs  mail.rs  main.rs  markup.rs  ratelimit.rs  stats.rs  templates.rs
src/formats/: documenta.rs  external_link.rs  horizontal.rs  mod.rs  no_show.rs  no_thumbs.rs  over_and_over.rs  random_image.rs  slideshow.rs  tag_display.rs  thickbox.rs  visual_index.rs
src/models/: exhibit.rs  media.rs  mod.rs  section.rs  settings.rs  tag.rs  user.rs
src/routes/: public.rs
src/routes/admin/: auth.rs  dashboard.rs  exhibits.rs  media.rs  mod.rs  sections.rs  settings.rs  (+2 more)
templates/admin/: _icons.html  dashboard.html  forgot.html  layout.html  login.html  reset.html
templates/public/: error.html  layout.html  nav.html  password_gate.html  tag.html
(+30 files in other folders)
