[package]
name = "openexhibit"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.7"
actix-session = { version = "0.10", features = ["cookie-session"] }
askama = "0.12"
askama_actix = "0.14"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "json", "migrate"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
thiserror = "1"
anyhow = "1"
image = "0.25"
fast_image_resize = "6"
kamadak-exif = "0.6"
mime = "0.3"
futures-util = "0.3"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
ammonia = "4"
regex = "1"

[build-dependencies]
grass = "0.13"
walkdir = "2"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
